services/auth/manifests/test/auth-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  namespace: citizens-folder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
      - name: auth-api
        image: spbpatino/citizens-folder-auth:latest
        imagePullPolicy: Always
        envFrom:
        - configMapRef:
            name: auth-api
        - secretRef:
            name: auth-api
        ports:
        - containerPort: 8050
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "750m"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /api/info
            port: 8050
        livenessProbe:
          httpGet:
            path: /api/info
            port: 8050
