services/auth/manifests/test/auth-ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth-api
  name: auth-api
  namespace: citizens-folder
spec:
  selector:
    app: auth-api
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8050
